java: add unit test